// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Grid breakpoint styles should match larger screen sizes if their breakpoint style is not defined 1`] = `
.c1 {
  box-sizing: border-box;
  background-color: transparent;
  outline: none;
  margin: 8px 8px;
  width: calc(25% - 16px);
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (min-width:769px) {
  .c1 {
    width: calc(50% - 16px);
  }
}

@supports (display:grid) {
  .c1 {
    grid-column: span 3;
    width: auto;
    margin: 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-template-columns: repeat(12,1fr);
    grid-gap: 16px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c1"
    />
    <div
      class="c1"
    />
    <div
      class="c1"
    />
  </div>
</div>
`;

exports[`component: Grid should render 4 columns 1`] = `
.c1 {
  box-sizing: border-box;
  background-color: transparent;
  outline: none;
  margin: 8px 8px;
  width: calc(25% - 16px);
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@supports (display:grid) {
  .c1 {
    grid-column: span 3;
    width: auto;
    margin: 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-template-columns: repeat(12,1fr);
    grid-gap: 16px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c1"
    />
    <div
      class="c1"
    />
    <div
      class="c1"
    />
  </div>
</div>
`;

exports[`component: Grid should render 6 columns 1`] = `
.c1 {
  box-sizing: border-box;
  background-color: transparent;
  outline: none;
  margin: 8px 8px;
  width: calc(33.33333333333333% - 16px);
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (min-width:1441px) {
  .c1 {
    width: calc(16.666666666666664% - 16px);
  }
}

@supports (display:grid) {
  .c1 {
    grid-column: span 4;
    width: auto;
    margin: 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-template-columns: repeat(12,1fr);
    grid-gap: 16px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c1"
    />
    <div
      class="c1"
    />
    <div
      class="c1"
    />
    <div
      class="c1"
    />
    <div
      class="c1"
    />
  </div>
</div>
`;

exports[`component: Grid should render extraLarge viewport design 1`] = `
.c1 {
  box-sizing: border-box;
  background-color: transparent;
  outline: none;
  margin: 8px 8px;
  width: calc(33.33333333333333% - 16px);
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (min-width:1441px) {
  .c1 {
    width: calc(16.666666666666664% - 16px);
  }
}

@supports (display:grid) {
  .c1 {
    grid-column: span 4;
    width: auto;
    margin: 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-template-columns: repeat(12,1fr);
    grid-gap: 16px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c1"
    />
    <div
      class="c1"
    />
    <div
      class="c1"
    />
    <div
      class="c1"
    />
    <div
      class="c1"
    />
  </div>
</div>
`;

exports[`component: Grid should render tiny viewport design 1`] = `
.c1 {
  box-sizing: border-box;
  background-color: transparent;
  outline: none;
  margin: 8px 8px;
  width: calc(25% - 16px);
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@supports (display:grid) {
  .c1 {
    grid-column: span 3;
    width: auto;
    margin: 0;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-template-columns: repeat(12,1fr);
    grid-gap: 16px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c1"
    />
    <div
      class="c1"
    />
    <div
      class="c1"
    />
  </div>
</div>
`;
